ARROW-10493: [C++][Parquet] Fix offset lost in MaybeReplaceValidity

This PR fixes the offset being lost when the validity bitmap is updated.

https://issues.apache.org/jira/browse/ARROW-10493

Closes #8589 from chrisavl/10493-column-writer-nested-nullable-offset

Lead-authored-by: Christian Lundgren <chrisavl@users.noreply.github.com>
Co-authored-by: Micah Kornfield <emkornfield@gmail.com>
Signed-off-by: Micah Kornfield <emkornfield@gmail.com>